# XGraphics

./: CMakeLists.txt  Readme.md
XGraphics/: CMakeLists.txt
XGraphics/XItem/: XGraphicsEllipseItem.cpp  XGraphicsEllipseItem.h  XGraphicsRectItem.cpp  XGraphicsRectItem.h
XGraphics/include/: XGraphicsGlobal.h  XGraphicsItem.h  XGraphicsScene.h  XGraphicsView.h
XGraphics/src/: XGraphicsItem.cpp  XGraphicsScene.cpp  XGraphicsView.cpp
XGraphicsApp/: CMakeLists.txt  main.cpp
XGraphicsApp/Frm/: AppMainWindow.cpp  AppMainWindow.h  AppMainWindow.ui
XGraphicsApp/Res/: AppRes.qrc
XGraphicsApp/Utils/: U_XmlHelper.h
XGraphicsApp/XGraphics/: AppXGraphicsFactory.cpp  AppXGraphicsFactory.h
